<resources>
    <string name="app_name">ExamplesOnly</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account_policy">By creating an account, you accept ExamplesOnly\'s <a href="https://examplesonly.com/legal/terms">Terms of Service</a> and <a href="https://examplesonly.com/legal/privacy-policy">Privacy Policy.</a></string>
    <string name="verify_email_title">We\'ve sent an email to <b>%s</b>. Open your email app to verify.</string>
    <string name="verify_email">Verify your email to continue.</string>
    <string name="login_with_google">Continue with Google</string>
    <string name="login_with_linkedin">Continue with LinkedIn</string>

    <string name="user_full_name">%s %s</string>
    <string name="choose_category">What are you interested in?</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="publish">Publish</string>
    <string name="question">Question</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="bio">Bio</string>
    <string name="dot">•</string>
    <string name="no_answer_yet">No Answer Yet</string>
    <string name="post_example">Post Example</string>
    <string name="save">Save</string>
    <string name="request">Request</string>
    <string name="more">More</string>
    <string name="no_example_yet">No examples yet</string>
    <string name="answer">Answer</string>
    <string name="categories">Categories</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_google">Continue with Google</string>
    <string name="sign_in_apple">Sign In with Apple</string>
    <string name="sign_in_email">Continue with Email</string>
    <string name="create_account">Don\'t have an account? <b>Create Now!</b></string>
    <string name="sign_up">Sign up</string>
    <string name="next">Next</string>
    <string name="related_videos">Related Examples</string>
    <string name="could_not_load_video">Could not load example</string>
    <string name="default_notification_channel_id">Default</string>
    <string name="btn_retry">Retry</string>
    <string name="btn_cancel">Cancel</string>
    <string name="message_upload_failed">Example is not uploaded. Please try again</string>
    <string name="error_upload_failed">Example upload failed</string>
    <string name="video_uploading">Uploading your example</string>
    <string name="in_progress">in progress</string>
    <string name="message_upload_success">Example uploaded successfully</string>
    <string name="message_upload_success_desc">Tap here to see your example</string>
    <string name="google_server_client_id">44367283781-cqb8fg2tibjfh6ij2su1n54gcmrsrv4b.apps.googleusercontent.com</string>
    <string name="logging_out">Logging out…</string>
    <string name="logging_in">Logging in…</string>
    <string name="loading">Loading…</string>
    <string name="updating">Updating…</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="enter_email_to_continue">Enter you email address and we\'ll send you a link to get back into your account.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="one_more_to_go">1 more to go…</string>
    <string name="get_started">Get Started</string>
    <string name="refresh">Refresh</string>
    <string name="pattern_capital_letter">^(?=.*[a-z])(?=.*[A-Z])(?=.*\\d).+$</string>
    <string name="something_went_wrong">Something went wrong. Please try again.</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="follow_back">Follow Back</string>

    <string name="notification_channel_account_id">channel_account</string>
    <string name="notification_channel_account_name">Account</string>
    <string name="notification_channel_account_description">User account related notifications</string>
    <string name="notification">Notification</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="search_hint">Search…</string>
</resources>