<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.fragment.DemandDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/dark"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/action_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/title">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <LinearLayout
                    android:id="@+id/post_example"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="4dp">

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@drawable/ic_video_add_mono"
                        app:tint="@color/colorPrimary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/post_example"
                        android:textColor="#636466"
                        android:textSize="12sp" />
                </LinearLayout>
            </FrameLayout>

<!--            <FrameLayout-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1">-->

<!--                <LinearLayout-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:background="?attr/selectableItemBackgroundBorderless"-->
<!--                    android:clickable="true"-->
<!--                    android:focusable="true"-->
<!--                    android:gravity="center"-->
<!--                    android:orientation="vertical"-->
<!--                    android:padding="4dp">-->

<!--                    <ImageView-->
<!--                        android:layout_width="32dp"-->
<!--                        android:layout_height="32dp"-->
<!--                        android:src="@drawable/ic_bookmark_mono" />-->

<!--                    <TextView-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:fontFamily="@font/roboto_medium"-->
<!--                        android:text="@string/save"-->
<!--                        android:textColor="#636466"-->
<!--                        android:textSize="12sp" />-->
<!--                </LinearLayout>-->
<!--            </FrameLayout>-->


<!--            <FrameLayout-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1">-->

<!--                <LinearLayout-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:background="?attr/selectableItemBackgroundBorderless"-->
<!--                    android:clickable="true"-->
<!--                    android:focusable="true"-->
<!--                    android:gravity="center"-->
<!--                    android:orientation="vertical"-->
<!--                    android:padding="4dp">-->

<!--                    <ImageView-->
<!--                        android:layout_width="32dp"-->
<!--                        android:layout_height="32dp"-->
<!--                        android:src="@drawable/ic_user_req_mono"-->
<!--                        app:tint="@color/md_grey_600" />-->

<!--                    <TextView-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:fontFamily="@font/roboto_medium"-->
<!--                        android:text="@string/request"-->
<!--                        android:textColor="#636466"-->
<!--                        android:textSize="12sp" />-->
<!--                </LinearLayout>-->
<!--            </FrameLayout>-->

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="4dp">

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@drawable/ic_ellipsis_h"
                        app:tint="@color/md_grey_600" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/more"
                        android:textColor="#636466"
                        android:textSize="12sp" />
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>

        <include
            android:id="@+id/action_devider"
            layout="@layout/devider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/action_holder" />

        <LinearLayout
            android:id="@+id/no_answer_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintTop_toBottomOf="@+id/action_devider">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/ic_pen_mono" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/no_answer_yet"
                android:textColor="@color/dark"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/videos_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/no_answer_container">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="1 Example"
                android:textColor="@color/dark"
                android:textSize="16sp"
                android:textStyle="bold" />

            <include
                layout="@layout/devider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@+id/action_holder" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/video_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>